--- a/first-project/index.html
+++ b/first-project/index.html
@@ -12,9 +12,9 @@
 
 <body>
   <app-root></app-root>
-  <script src="First-Project/first-project/runtime.526edeec4c7bc03b.js" type="module"></script>
-  <script src="First-Project/first-project/polyfills.ec21cbe47b7699e7.js" type="module"></script>
-  <script src="First-Project/first-project/main.644cfde43c01ccc9.js" type="module"></script>
+  <script src="./First-Project/first-project/runtime.526edeec4c7bc03b.js" type="module"></script>
+  <script src="./First-Project/first-project/polyfills.ec21cbe47b7699e7.js" type="module"></script>
+  <script src="./First-Project/first-project/main.644cfde43c01ccc9.js" type="module"></script>
 </body>
 
 </html>
