--- a/first-project/index.html
+++ b/first-project/index.html
@@ -7,7 +7,7 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="stylesheet" href=".../styles.ef46db3751d8e999.css">
+  <link rel="stylesheet" href="./First-Project/first-project/styles.ef46db3751d8e999.css">
 </head>
 
 <body>
